styles(design): fix whitespace issue

--- a/src/resources/elements/primeDesignSystem/_dialogs.scss
+++ b/src/resources/elements/primeDesignSystem/_dialogs.scss
@@ -53,6 +53,9 @@
   }
 
   > .dialogFooter {
+    display: flex;
+    justify-content: end;
+
     padding-top: 12px;
     padding-bottom: 12px;
     padding-right: 20px;
